--- a/desafios/ex012/estilo/style.css
+++ b/desafios/ex012/estilo/style.css
@@ -1,5 +1,14 @@
 @charset "UFT-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --foonte3: 'Sriracha', cursive;
+}
+
     *{
         margin: 0px;
         padding: 0px;
@@ -8,7 +17,6 @@
     html, body {
         min-height: 100vh;
         background-color: darkgrey;
-       
     }
 
     header {
@@ -24,6 +32,7 @@
 
     header > p {
         padding-bottom: 50px;
+        
          }
 
          header a, footer a {
