--- a/desafios/ex012/estilo/style.css
+++ b/desafios/ex012/estilo/style.css
@@ -12,22 +12,27 @@
     *{
         margin: 0px;
         padding: 0px;
+        font-size: 1em;
     }
 
     html, body {
         min-height: 100vh;
-        background-color: darkgrey;
+        background-color: rgb(126, 121, 121);
     }
 
     header {
         background-color: black;
         color: white;
         text-align: center;
+
+        
     }
 
     header > h1 {
         padding-top: 50px;
         font-variant: small-caps;
+        font-family: var(--fonte2);
+        font-size: 7vw;
     }
 
     header > p {
@@ -46,6 +51,8 @@
             padding-bottom: 10vh;
             line-height: 2em;
             padding-left: 30px;
+            font-family: var(--foonte3);
+            font-size: 4vw;
          }
 
          header a:hover, footer a:hover {
@@ -58,9 +65,11 @@
          }
          
          section.imagem > p {
-            width: 400px;
+            display: inline-block;
+            padding: 5px;
              background-color: rgb(63, 62, 62);
-             padding-left:20px;
+
+             
          }
     
     footer {
